# VACUUMMS

./: .gitignore  CMakeLists.txt  DEVELOPER_GUIDE.md  README.md  RELEASE_NOTES.md  ROADMAP.md
applications/: .CMakeLists.txt.swp  CMakeLists.txt
applications/2pc/: 2pc.c
applications/apocrypha/lj/: command_line_parser.c  io_setup.c  lj_main.c
applications/cav2cluster/: cav2cluster.c
applications/center/: center.c
applications/csd/: command_line_parser.c  csd.c
applications/ddx/: .edges2pairs.cc.swp  ddx.c  edges2pairs.cc  edges2var.cc  io_setup.c  pddx.c  trace_ddx.c  vddx.c  vddx_io_setup.c  vuniq.cc
applications/end2end/: end2end.c
applications/hs/: hs_main.c  io_setup.c
applications/ljx/: command_line_parser.c  energy.c  graphics.c  io_setup.c  ljx_main.c
applications/mfp/: io_setup.c  mfp.c
applications/rattle/: rattle.c
applications/rog/: rog.c
applications/sdhs/: graphics.c  io_setup.c  sdhs_main.c
applications/size/: size.c
applications/sv/: boxv.c  cell_volume.c  csa.c  cv.c  tcv.cc
applications/test/: ddx_fcc.sh  expected_ddx_fcc.out  expected_ljx.out  expected_pddx_fcc.out  pddx_fcc.sh  test_ddx_fcc.sh  test_ljx.sh  test_pddx_fcc.sh
applications/variational/: .gitignore  Makefile  _variational.cc  configuration.cc  configuration.hh  constants.cc  lj.pov  quaternion.cc  quaternion.hh  rebalance.cc  rebalance.hh  test_configuration.cc  test_rebalance_1D.cc  test_rebalance_3D.cc  test_rotate.c  test_variational.cc  test_variational_2D.cc  test_variational_3D.cc  test_variational_FCC.cc  test_variational_lj.cc  tester.cc  variational  variational.cc  variational.hh  variational.md  variational_2D.cc  variational_3D.cc  x.gfg
applications/variational/examples/: Makefile  _lj.gfg  _lj.pov  lj.pov  lj_all.pov  lj_var.pov  make.sh  twist.c  twist.sh
applications/variational/examples/lj_atoms/: Makefile  lj.pov  lj_all.cc  lj_all.out  lj_atoms.pov
applications/variational/examples/random/: rando.gfg  rando2.gfg
applications/variational/share/doc/: variational.md
applications/variational/test/: test_quaternion.cc  test_rebalance_3D.cc  test_variational_2D.cc
applications/vis/: command_line_parser.c  graphics.c  io_setup.c  vis.c
cmake/vacuumms/: version.h.in
include/: dddx.h  ftw_types.h
include/vacuumms/: cav_parser.h  cavity.hh  config_parser.h  constants.h  cuda_utils.h  edge.hh  gfg2fvi.h  gfgEnergy.h  limits.h  pair.hh  param.h  param.hh  pov.h  rng.h  rng2.h  science.h  std.h  types.h  version.h  vertex.hh
include/vacuumms/variational/: quaternion.hh  variational.hh
libraries/: CMakeLists.txt
libraries/ftw_general/: povheader.c
libraries/vacuumms_cpp/: cavity.cc  edge.cc  pair.cc  param.cc  vertex.cc
libraries/vacuumms_cuda/: vacuumms_cuda_utils.cu  vacuumms_gfg2fvi.cu
libraries/vacuumms_rt/: cav_parser.c  command_line_parser.c  config_parser.c  constants.c  param.c  prng.c  rng.c  rng2.c  std.c
libraries/vacuumms_tiff/: vacuumms_makeTIFF.c
modules/variational/: .gitignore  CMakeLists.txt  _Makefile  _variational.hh  configuration.cc  constants.cc  quaternion.cc  variational_2D.cc  variational_3D.cc
modules/variational/examples/: EXAMPLES.md
modules/variational/examples/FCC/: fcc.gfg  fcc.out  fcc.pov  fcc.unq  fcc_cell.gfg  fcc_var.gfg
modules/variational/examples/PMP/: Makefile  PMP.edg  PMP.gfg  PMP.lmps  PMP.map  PMP.pov  PMP.unq  PMP.var  PMP.vcv  PMP.vnq  PMP.vrt  base.pov  cavities.pov  pair.lj  pmp.cc  preprocess.sh  process.sh  twist.c  twist.sh  voro_pair  voro_pair.cc  voro_pair.pov
modules/variational/examples/lj_atoms/: Makefile  lj.pov  lj_all.cc  lj_atoms.pov  lj_voro.pov  ljx.gfg  twist.c
modules/variational/examples/random/: Makefile  base.pov  random.cc  random.gfg
modules/variational/share/doc/: developer.md  variational cross.xcf  variational perpendicular.xcf  variational points.xcf  variational.md  variational.xcf  variational_n.xcf  variational_respace.xcf
modules/variational/test/: CMakeLists.txt  _Makefile  _test_rebalance_2D.cc  _test_rebalance_3D.cc  test_configuration.cc  test_quaternion.cc  test_variational_2D.cc  test_variational_3D.cc  test_variational_FCC.cc  test_variational_lj.cc  test_variational_random.cc
test/: CMakeLists.txt  applications  binary.cc  expected_compare_output.out  test_compare_output.sh  utils
utils/: CMakeLists.txt  add.c  avg.c  cav2pov.c  cfg2gfg.c  ck.c  cram.c  dst2hst.c  dwf.c  expr_add.c  expr_multiply.c  fvi2pov.c  fvi2tiff.c  gfg2fvi.c  gfg2pov.c  gfg2voro.cc  gfgc2pov.c  lmp2gfg.c  lmp2gfg.cc  log10.c  loge.c  max.c  min.c  miss.c  normalize.c  povheader.c  pow.c  readtiff.c  replicate_cav.c  replicate_gfg.c  sgfg2fvi.c  smooth.c  sq.c  stack_tiffs.c  std.c  stream2slice.c  stream_multiply.c  truncate.c  uniq.c  vacuumms.c  (+2 more)
utils/test/: expected_uniq.out  test_uniq.sh
